# bazel_go_play

./: .gitignore  BUILD.bazel  WORKSPACE  detect_updates.sh  go.mod  go.sum
libs/hello/: BUILD.bazel  main.go
services/one/: BUILD.bazel  main.go
services/two/: BUILD.bazel  main.go
