load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "two_lib",
    srcs = ["main.go"],
    importpath = "privacy_go/services/two",
    visibility = ["//visibility:private"],
    deps = [
        "//libs/hello",
        "@com_github_labstack_echo_v4//:echo",
    ],
)

go_binary(
    name = "two",
    embed = [":two_lib"],
    visibility = ["//visibility:public"],
)
